--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "webpack serve --mode development --open",
+    "build": "webpack --mode production",
     "test": "jest"
   },
   "dependencies": {
